--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,27 +15,42 @@
       border: 2px solid #0d6efd;
       box-shadow: 0 0 10px rgba(13, 110, 253, 0.5);
     }
+    .pointer{
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
   <div class="container my-5" x-data="restaurantApp()" x-init="init()">
 
     <h2 class="mb-4">Restaurants</h2>
-    <div class="row g-3">
-      <template x-for="restaurant in restaurants" :key="restaurant.id">
-        <div class="col-12 col-sm-6 col-md-4">
-          <div class="card text-center h-100 restaurant-card" 
-               :class="selectedRestaurantId === restaurant.id ? 'selected' : ''"
-               @click="selectRestaurant(restaurant.id)"
-               style="cursor:pointer;">
-            <div class="card-body">
-              <h5 class="card-title" x-text="restaurant.name"></h5>
-              <p class="card-text" x-text="restaurant.address"></p>
-            </div>
+    <div class="row g-4">
+    <template x-for="restaurant in restaurants" :key="restaurant.id">
+      <div class="col-12 col-sm-6 col-md-4">
+        <div 
+          class="card h-100 restaurant-card text-center pointer"
+          :class="selectedRestaurantId === restaurant.id ? 'selected' : ''"
+          @click="selectRestaurant(restaurant.id)"
+        >
+          <div class="card-body d-flex flex-column justify-content-between">
+            <h5 class="card-title fw-bold mb-2" x-text="restaurant.name"></h5>
+            <p class="card-text text-muted mb-3" x-text="restaurant.address"></p>
+            <p class="card-subtitle text-secondary mb-0 position-absolute top-0 start-0 m-2">
+              <span class="me-1" x-text="countryCodeToFlagEmoji(restaurant.currency)"></span>
+              <span x-text="restaurant.currency"></span>
+            </p>
+
+          </div>
+          <div 
+            x-show="selectedRestaurantId === restaurant.id"
+            class="position-absolute top-0 end-0 m-2 badge bg-primary"
+          >
+            Selected
           </div>
         </div>
-      </template>
-    </div>
+      </div>
+    </template>
+  </div>
 
     <h2 class="my-4" x-show="tables.length">Tables</h2>
     <div class="row g-3">
@@ -63,25 +78,33 @@
           try {
             const res = await fetch('/api/v1/restaurants');
             response = await res.json()
-            console.log("RESTAURANTS FETCHED: ", response)
             this.restaurants = response.data.restaurants
-            console.log(this.restaurants)
           } catch (err) {
             console.error('Failed to fetch restaurants:', err);
           }
         },
         async selectRestaurant(id) {
+          if (this.selectedRestaurantId === id) {
+            return
+          }
           this.selectedRestaurantId = id;
           this.tables = []; // Clear old tables while loading
           try {
             const res = await fetch(`/api/v1/restaurants/${id}/tables`);
-            response = await res.json()
-            this.tables = response.data
-            console.log("FETCHED TABLES: ", this.tables)
+            resp = await res.json()
+            this.tables = resp.data
           } catch (err) {
             console.error('Failed to fetch tables:', err);
             this.tables = [];
           }
+        },
+        countryCodeToFlagEmoji(code) {
+          return code
+            .slice(0, 2)
+            .toUpperCase()
+            .replace(/./g, char =>
+              String.fromCodePoint(char.charCodeAt(0) + 127397)
+            );
         }
       }
     }
