--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,9 +7,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <style>
-    .restaurant-card:hover {
+    .selectable:hover {
       transform: scale(1.05);
       transition: transform 0.2s;
+      cursor: pointer;
     }
     .selected {
       border: 2px solid #0d6efd;
@@ -28,7 +29,7 @@
     <template x-for="restaurant in restaurants" :key="restaurant.id">
       <div class="col-12 col-sm-6 col-md-4">
         <div 
-          class="card h-100 restaurant-card text-center pointer"
+          class="card h-100 selectable text-center"
           :class="selectedRestaurantId === restaurant.id ? 'selected' : ''"
           @click="selectRestaurant(restaurant.id)"
         >
@@ -56,7 +57,7 @@
     <div class="row g-3">
       <template x-for="table in tables" :key="table.id">
         <div class="col-6 col-md-3">
-          <div class="card text-center">
+          <div class="card text-center selectable">
             <div class="card-body">
               <h6 class="card-title" x-text="'Table: ' + table.name"></h6>
               <p class="card-text" x-text="'Seats: ' + table.capacity"></p>
