--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="dine-icon.png">
+  <link rel="icon" type="image/png" href="dine-icon-centered.png">
   <title>Restaurants & Tables</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <script defer src="app.js"></script>
-  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <script defer src="https://unpkg.com/alpinejs@3.15.2/dist/cdn.min.js"></script>
   
   <link rel="stylesheet" href="style.css">
 </head>
