--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/png" href="dine-icon.png">
   <title>Restaurants & Tables</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
 
   <script defer src="app.js"></script>
   <script defer src="https://unpkg.com/alpinejs@3.15.2/dist/cdn.min.js"></script>
@@ -15,6 +17,7 @@
 <body>
   <div class="container my-5" x-data="restaurantApp()" x-init="init()">
 
+    <!-- RESTAURANTS -->
     <h2 class="mb-4">Restaurants</h2>
     <div class="row g-4">
       <template x-for="restaurant in restaurants" :key="restaurant.id">
@@ -48,6 +51,7 @@
       </template>
     </div>
 
+    <!-- TABLES -->
     <h2 class="my-4" x-show="tables.length">Tables</h2>
     <div class="row g-3">
       <template x-for="table in tables" :key="table.id">
@@ -66,6 +70,81 @@
       </template>
     </div>
 
+  <!-- MENU AND ORDER --> 
+  <div class="row mt-5" x-show="menu && order">
+    <!-- LEFT COLUMN – MENU (2/3 width) -->
+    <div class="col-md-8">
+      <h3 class="mb-4 fw-bold border-bottom">Menu</h3>
+
+      <template x-for="category in menu.categories" :key="category.id">
+        <div class="mb-5">
+          <h4 class="fw-semibold  pb-2 mb-3" x-text="category.name"></h4>
+          <template x-for="item in category.items" :key="item.id">
+            <div class="p-3 mb-3 border rounded shadow-sm d-flex justify-content-between align-items-center menu-item">
+              <div class="pe-3">
+                <div class="d-flex align-items-center mb-1">
+                  <span class="fs-5 fw-semibold me-2" x-text="item.name"></span>
+                  <span class="badge bg-secondary" x-text="(item.price_in_cents / 100).toFixed(2)"></span>
+                </div>
+                <p class="text-muted mb-0" x-text="item.description"></p>
+              </div>
+              <button 
+                class="btn btn-primary btn-sm"
+                @click.stop="addItemToOrder(item.id)"
+                x-show="order.status === 'open'"
+                x-bind:class="{'d-flex': order.status === 'open'}"
+              >
+                <i class="bi bi-plus-lg font-bold"></i>
+              </button>
+            </div>
+          </template>
+
+        </div>
+      </template>
+    </div>
+
+    <!-- RIGHT COLUMN – ORDER (1/3 width) -->
+    <div class="col-md-4">
+        <h3 class="mb-4 fw-bold border-bottom">Order</h3>
+        <div class="border rounded shadow-sm p-1">
+          <div class="d-flex justify-content-between align-items-center p-3 rounded">
+            <div class="d-flex flex-column">
+              <span class="text-muted small">Total Price</span>
+              <span class="fs-5 fw-bold" x-text="`${(order.total_price_in_cents / 100).toFixed(2)}`"></span>
+            </div>
+            <div class="d-flex flex-column text-end">
+              <span class="text-muted small">Tip</span>
+              <span class="fs-5 fw-bold text-success" x-text="`${(order.tip_amount_in_cents / 100).toFixed(2)}`"></span>
+            </div>
+
+          </div>
+          <template x-if="order.items && order.items.length > 0">
+            <div class="list-group mb-3">
+              <template x-for="orderItem in order.items" :key="orderItem.id">
+                <div class="list-group-item d-flex justify-content-between">
+                  <span>
+                    <span x-text="orderItem.name"></span>
+                    <span class="text-muted" x-text="(orderItem.price_in_cents / 100).toFixed(2)"></span>
+                  </span>
+                  <button 
+                    class="btn btn-danger btn-sm align-items-center justify-content-center p-1"
+                    style="width: 20px; height: 20px;"
+                    @click.stop="removeItemFromOrder(orderItem.id)"
+                    x-show="order.status === 'open'"
+                    x-bind:class="{'d-flex': order.status === 'open'}"
+                  >
+                    <i class="bi bi-dash" style="font-size: 1rem;"></i>
+                  </button>
+                </div>
+              </template>
+            </div>
+          </template>
+          <template x-if="!order.items || order.items.length === 0">
+            <p class="text-muted">No items yet.</p>
+          </template>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
