--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
   <title>Restaurants & Tables</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="..." crossorigin="anonymous"></script>
 
   <script defer src="app.js"></script>
   <script defer src="https://unpkg.com/alpinejs@3.15.2/dist/cdn.min.js"></script>
@@ -69,130 +71,161 @@
       </template>
     </div>
 
-  <!-- MENU AND ORDER --> 
-  <template x-if="menu && order">
-    <div class="row mt-5" x-show="menu && order">
-      <!-- LEFT COLUMN – MENU (2/3 width) -->
-      <div class="col-md-8">
-        <h3 class="mb-4 fw-bold border-bottom">Menu</h3>
+    <!-- MENU AND ORDER --> 
+    <template x-if="menu && order">
+      <div class="row mt-5" x-show="menu && order">
+        <!-- LEFT COLUMN – MENU (2/3 width) -->
+        <div class="col-md-8">
+          <h3 class="mb-4 fw-bold border-bottom">Menu</h3>
 
-        <template x-for="category in menu.categories" :key="category.id">
-          <div class="mb-5">
-            <h4 class="fw-semibold  pb-2 mb-3" x-text="category.name"></h4>
-            <template x-for="item in category.items" :key="item.id">
-              <div class="p-3 mb-3 border rounded shadow-sm d-flex justify-content-between align-items-center menu-item">
-                <div class="pe-3">
-                  <div class="d-flex align-items-center mb-1">
-                    <span class="fs-5 fw-semibold me-2" x-text="item.name"></span>
-                    <span class="badge bg-secondary" x-text="centsToFloat(item.price_in_cents)"></span>
+          <template x-for="category in menu.categories" :key="category.id">
+            <div class="mb-5">
+              <h4 class="fw-semibold  pb-2 mb-3" x-text="category.name"></h4>
+              <template x-for="item in category.items" :key="item.id">
+                <div class="p-3 mb-3 border rounded shadow-sm d-flex justify-content-between align-items-center menu-item">
+                  <div class="pe-3">
+                    <div class="d-flex align-items-center mb-1">
+                      <span class="fs-5 fw-semibold me-2" x-text="item.name"></span>
+                      <span class="badge bg-secondary" x-text="centsToFloat(item.price_in_cents)"></span>
+                    </div>
+                    <p class="text-muted mb-0" x-text="item.description"></p>
                   </div>
-                  <p class="text-muted mb-0" x-text="item.description"></p>
+                  <button 
+                    class="btn btn-primary btn-sm"
+                    @click.stop="addItemToOrder(item.id)"
+                    x-show="order.status === 'open'"
+                    x-bind:class="{'d-flex': order.status === 'open'}"
+                  >
+                    <i class="bi bi-plus-lg font-bold"></i>
+                  </button>
                 </div>
-                <button 
-                  class="btn btn-primary btn-sm"
-                  @click.stop="addItemToOrder(item.id)"
-                  x-show="order.status === 'open'"
-                  x-bind:class="{'d-flex': order.status === 'open'}"
-                >
-                  <i class="bi bi-plus-lg font-bold"></i>
-                </button>
-              </div>
-            </template>
-
-          </div>
-        </template>
-      </div>
-
-      <!-- RIGHT COLUMN – ORDER (1/3 width) -->
-      <div class="col-md-4">
-          <h3 class="mb-4 fw-bold border-bottom">Order</h3>
-          <div class="border rounded shadow-sm p-1">
-            <div class="d-flex justify-content-between align-items-center p-3 rounded">
-              <div class="d-flex flex-column">
-                <span class="text-muted small">Total Price</span>
-                <span class="fs-5 fw-bold" x-text="centsToFloat(order.total_price_in_cents)"></span>
-              </div>
-              <div class="d-flex flex-column text-end">
-                <span class="text-muted small">Tip</span>
-                <span class="fs-5 fw-bold text-success" x-text="centsToFloat(order.tip_amount_in_cents)"></span>
-              </div>
+              </template>
 
             </div>
-            <template x-if="order.items && order.items.length > 0">
-              <div class="list-group mb-3">
-                <template x-for="orderItem in order.items" :key="orderItem.id">
-                  <div class="list-group-item d-flex justify-content-between">
-                    <span>
-                      <span x-text="orderItem.name"></span>
-                      <span class="text-muted" x-text="centsToFloat(orderItem.price_in_cents)"></span>
-                    </span>
-                    <button 
-                      class="btn btn-danger btn-sm align-items-center justify-content-center p-1"
-                      style="width: 20px; height: 20px;"
-                      @click.stop="removeItemFromOrder(orderItem.id)"
-                      x-show="order.status === 'open'"
-                      x-bind:class="{'d-flex': order.status === 'open'}"
-                    >
-                      <i class="bi bi-dash" style="font-size: 1rem;"></i>
-                    </button>
-                  </div>
-                </template>
+          </template>
+        </div>
+
+        <!-- RIGHT COLUMN – ORDER (1/3 width) -->
+        <div class="col-md-4">
+            <h3 class="mb-4 fw-bold border-bottom">Order</h3>
+            <div class="border rounded shadow-sm p-1">
+              <div class="d-flex justify-content-between align-items-center p-3 rounded">
+                <div class="d-flex flex-column">
+                  <span class="text-muted small">Total Price</span>
+                  <span class="fs-5 fw-bold" x-text="centsToFloat(order.total_price_in_cents)"></span>
+                </div>
+                <div class="d-flex flex-column text-end">
+                  <span class="text-muted small">Tip</span>
+                  <span class="fs-5 fw-bold text-success" x-text="centsToFloat(order.tip_amount_in_cents)"></span>
+                </div>
+
               </div>
-            </template>
-            <template x-if="!order.items || order.items.length === 0">
-              <p class="text-muted">No items yet.</p>
-            </template>
+              <template x-if="order.items && order.items.length > 0">
+                <div class="list-group mb-3">
+                  <template x-for="orderItem in order.items" :key="orderItem.id">
+                    <div class="list-group-item d-flex justify-content-between">
+                      <span>
+                        <span x-text="orderItem.name"></span>
+                        <span class="text-muted" x-text="centsToFloat(orderItem.price_in_cents)"></span>
+                      </span>
+                      <button 
+                        class="btn btn-danger btn-sm align-items-center justify-content-center p-1"
+                        style="width: 20px; height: 20px;"
+                        @click.stop="removeItemFromOrder(orderItem.id)"
+                        x-show="order.status === 'open'"
+                        x-bind:class="{'d-flex': order.status === 'open'}"
+                      >
+                        <i class="bi bi-dash" style="font-size: 1rem;"></i>
+                      </button>
+                    </div>
+                  </template>
+                </div>
+              </template>
+              <template x-if="!order.items || order.items.length === 0">
+                <p class="text-muted">No items yet.</p>
+              </template>
 
-            <!-- add tip, lock order, init payment -->
-            <div class="d-flex flex-column flex-md-row gap-3 p-3 rounded border shadow-sm bg-light align-items-center">
+              <!-- add tip, lock order, init payment -->
+              <div class="d-flex flex-column flex-md-row gap-3 p-3 rounded border shadow-sm bg-light align-items-center">
 
-              <div class="d-flex align-items-center gap-2 flex-grow-1">
-                <input 
-                  type="number" 
-                  min="0"
-                  step="1"
-                  max="20000"
-                  x-model.number="tipAmount"
-                  class="form-control form-control-sm"
-                  placeholder="Tip amount"
-                  style="max-width: 120px;"
-                >
+                <div class="d-flex align-items-center gap-2 flex-grow-1">
+                  <input 
+                    type="number" 
+                    min="0"
+                    step="1"
+                    max="20000"
+                    x-model.number="tipAmount"
+                    class="form-control form-control-sm"
+                    placeholder="Tip amount"
+                    style="max-width: 120px;"
+                  >
+                  <button 
+                    class="btn btn-primary btn-sm"
+                    @click="editTip(tipAmount)"
+                  >
+                    Tip
+                  </button>
+                </div>
+
                 <button 
-                  class="btn btn-primary btn-sm"
-                  @click="editTip(tipAmount)"
+                  class="btn btn-warning btn-sm flex-shrink-0"
+                  @click="lockOrder"
+                  x-show="
+                    order.status === 'open'  && order.total_price_in_cents > 0"
                 >
-                  Tip
+                  Notify Waiter
                 </button>
+
+                <button 
+                  class="btn btn-success btn-sm flex-shrink-0"
+                  @click="initPayment"
+                  x-show="
+                    (order.status === 'locked' && (order.tip_amount_in_cents > 0 || order.total_price_in_cents > 0))
+                    || (order.status === 'open' && !order.total_price_in_cents > 0 && order.tip_amount_in_cents > 0)"
+                  :disabled="loadingPayment"
+                >
+                  <span x-show="loadingPayment" class="inline-flex items-center">
+                    .......
+                  </span>
+                  <span x-show="!loadingPayment">Pay</span>
+                </button>
+
               </div>
-
-              <button 
-                class="btn btn-warning btn-sm flex-shrink-0"
-                @click="lockOrder"
-                x-show="
-                  order.status === 'open'  && order.total_price_in_cents > 0"
-              >
-                Notify Waiter
-              </button>
-
-              <button 
-                class="btn btn-success btn-sm flex-shrink-0"
-                @click="initPayment"
-                x-show="
-                  (order.status === 'locked' && (order.tip_amount_in_cents > 0 || order.total_price_in_cents > 0))
-                  || (order.status === 'open' && !order.total_price_in_cents > 0 && order.tip_amount_in_cents > 0)"
-                :disabled="loadingPayment"
-              >
-                <span x-show="loadingPayment" class="inline-flex items-center">
-                  .......
-                </span>
-                <span x-show="!loadingPayment">Pay</span>
-              </button>
-
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </template>
+    </template>
+    <!-- TOASTERS :) -->
+    <div 
+        id="paymentSuccessToast"
+        class="toast align-items-center text-bg-success border-0 position-fixed bottom-0 end-0 m-3"
+        role="alert" 
+        aria-live="assertive" 
+        aria-atomic="true"
+      >
+        <div class="d-flex">
+          <div class="toast-body">
+            Payment successful! Waiter is notfied.
+          </div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+        </div>
+      </div>
+
+      <div 
+        id="paymentCancelToast"
+        class="toast align-items-center text-bg-danger border-0 position-fixed bottom-0 end-0 m-3"
+        role="alert" 
+        aria-live="assertive" 
+        aria-atomic="true"
+      >
+        <div class="d-flex">
+          <div class="toast-body">  
+            Payment flow was canceled.
+          </div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+        </div>
+      </div>
+  </div>
 </body>
 </html>
