--- a/frontend/index.html
+++ b/frontend/index.html
@@ -199,7 +199,7 @@
     <!-- TOASTERS :) -->
     <div 
         id="paymentSuccessToast"
-        class="toast align-items-center text-bg-success border-0 position-fixed bottom-0 end-0 m-3"
+        class="toast align-items-center text-bg-success border-0 position-fixed top-0 start-50 translate-middle-x m-3"
         role="alert" 
         aria-live="assertive" 
         aria-atomic="true"
@@ -214,7 +214,7 @@
 
       <div 
         id="paymentCancelToast"
-        class="toast align-items-center text-bg-danger border-0 position-fixed bottom-0 end-0 m-3"
+        class="toast align-items-center text-bg-danger border-0 position-fixed top-0 start-50 translate-middle-x m-3"
         role="alert" 
         aria-live="assertive" 
         aria-atomic="true"
