Change menu tooltip in frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -92,7 +92,7 @@
           <h3 class="mb-4 fw-bold border-bottom d-flex align-items-baseline">
             Menu
             <small class="text-muted fw-normal fst-italic ms-3 fs-6">
-              Trust me - You can upload images for menu items they just aren’t shown in this demo.
+              Trust me - managers can upload images for menu items they just aren’t shown in this demo.
             </small>
           </h3>
           <template x-for="category in menu.categories" :key="category.id">
