Add test card info to frontend demo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -222,7 +222,8 @@
                     Order is currently locked and the waiter has been notified.<br>
                     Only restaurant staff can modify items or unlock the order.<br>
                     You can still add tips.<br><br>
-                    Once you’re done dining, you can proceed with payment.
+                    Once you’re done dining, you can proceed with payment.<br><br>
+                    ApplePay/GooglePay is accepted for most countries, but you can use test card 4242424242424242 with any valid expiration/cvc.
                     <div 
                         class="position-absolute"
                         style="top: -6px; left: 50%; transform: translateX(-50%); width: 0; height: 0; border-left: 6px solid transparent; border-right: 6px solid transparent; border-bottom: 6px solid black;">
