Add websocket handler for ordering service

--- a/frontend/order.html
+++ b/frontend/order.html
@@ -26,7 +26,8 @@
                     x-show="isSuccess"
                     x-transition
                 >
-                    Order completed! Payment registered via webhook. The waiter has been notified.
+                    Order completed! Payment registered via webhook. The waiter has been notified. Feel free to explore the full
+                    <a href="/docs" class="fw-bold text-success">API docs</a>
                 </div>
                 <h3 class="text-center mb-4">Order</h3>
 
