Add link to websocket mode in frontend order details page

--- a/frontend/order.html
+++ b/frontend/order.html
@@ -95,6 +95,11 @@
                         Visit Another Restaurant
                     </a>
                 </div>
+                <div class="d-flex justify-content-center mt-2">
+                    <a href="/frontend/websocket.html" class="btn btn-outline-primary">
+                        Visit Another Restaurant in WebSocket mode
+                    </a>
+                </div>
             </div>
             
         </template>
